start creating some html code